GNOME Bugzilla – Bug 697694
watchdog: race causing deadlock in stop
Last modified: 2013-04-10 10:09:25 UTC
Created attachment 241128 [details] [review] Patch In some cases I get a race between g_main_loop_run (in the thread started in start) and g_main_loop_quit (in stop) that causes the main loop to continue running and thus stop failing to return.
Fixed by replacing the g_main_loop_quit with an idle event calling quit (thus making sure that they are called in the correct order)
Thanks! commit 3320f29a88df3a90aa4556fca5f08a738f34a8c9 Author: Alexander Schrab <alexas@axis.com> Date: Wed Apr 10 11:06:52 2013 +0200 watchdog: race between g_main_loop_run/_quit fixed https://bugzilla.gnome.org/show_bug.cgi?id=697694