watchdog: race between g_main_loop_run/_quit fixed

https://bugzilla.gnome.org/show_bug.cgi?id=697694